# Physics-Based-ID-EE-Capstone

./: .gitignore  README.md
Data/Benign/: plot_imu_vs_odom.py
Data/Benign/rosbag1/: metadata.yaml
Data/Benign/rosbag2/: experiment_8_0.db3:Zone.Identifier  metadata.yaml
Data/Benign/rosbag6/: metadata.yaml
Data/Malicious/rosbag3/: metadata.yaml
Data/Malicious/rosbag5/: metadata.yaml
Data/plot_scripts/: correlation_analysis.py  plot_data.py
__MACOSX/Nominal/: ._turtlebot_cpu_log.txt  ._turtlebot_temp_log.txt:Zone.Identifier
src/: CMakeLists.txt  MLFusion_trainer.py  MLtrainer.py  ROS_IF_Testing.py  ROS_IF_Training.py  cnn_lstm.py  cnn_lstm_dl.py  correlation_bot.py  data_label.py  data_transition.cpp  data_transition.h  dt_ids_node.py  ids_node.py  isolation_forest_model.pkl  knn_ids_node.py  main.cpp  mlfusion_ids_node.py  navbot_split.py  package.xml  physics_check.cpp  physics_check.h  plot_data.py  rf_ids_node.py  scaler.pkl
src/models/: decisiontree_navbot.joblib  feature_names_navbot.json  ml_fusion_navbot_config.json  randomforest_navbot.joblib
src/models/CNN-LSTM/: cnn_lstm_navbot.keras  cnn_lstm_navbot_config.json  cnn_lstm_navbot_scaler.joblib
